[CHANGE] update API for v0.8.9